# yoyoAI

./: .env.example  FUTURE_APPROACHES.md  README.md  pyproject.toml
Final-approach/: approach.md  main.py
diff-Approach/: dbscan-density-clustering.md  embedding-method.md  lapel-ephemerality-keyword-anchor.md  llm-approach.md  llm-approach.py  llm-whisper-translation.py  pyannote-rule-based-logic.py  session-merge-threshold.py
diff-Approach/dbscan-density-clustering/: approach.md  approach.py
diff-Approach/embedding-method/: approach.md  approach.py
diff-Approach/gemini-pipeline/: approach.md  approach.py
diff-Approach/lapel-ephemerality-keyword-anchor/: approach.md  approach.py
diff-Approach/llm-approach/: approach.md  approach.py
diff-Approach/pyannote-rule-based-logic/: approach.md  approach.py
diff-Approach/sarvam-pipeline/: approach.md  approach.py
diff-Approach/session-merge-threshold/: approach.md  approach.py
evolution and matrix/: Final-approach_metrics.json  dbscan-density-clustering_metrics.json  embedding-method_metrics.json  evaluate_approach.py  gemini-pipeline_metrics.json  ground_truth.json  lapel-ephemerality-keyword-anchor_metrics.json  llm-approach_metrics.json  pyannote-rule-based-logic_metrics.json  sarvam-pipeline_metrics.json  session-merge-threshold_metrics.json
